--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>CRL | Home</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Padauk&display=swap" rel="stylesheet">
 
+
+
+</head>
+<body>
+
+<!-- ================  Start of Home page  ================ -->
+
+	<div class="container">
+	<div class="page1">
+		<div class="homepage">
+			<p>LOREM IPSUM IT</p>
+			<h1>Responsive layouts don’t have to be a struggle</h1>
+		</div>
+	</div>
+	</div>
+
+<!-- ================  End of Home page  ================ -->	
+
+<!-- ================  Start of Page2  ================ -->
+
+	<div class="container">
+	<div class="page2">
+
+		<div class="HEADING__PAGE2">
+			<h2>Quality Designs</h2>
+		</div>
+		<div class="PARA1__PAGE2">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+				sed do eiusmod tempor incididunt ut labore et dolore
+				magna aliqua. Dui vivamus arcu felis bibendum ut
+				tristique. Arcu dui vivamus arcu felis. Sociis natoque
+				penatibus et magnis dis.
+			</p>
+		</div>
+		<div class="PARA2__PAGE2">
+			<p>
+				Felis donec et odio pellentesque diam volutpat. Aliquam
+				purus sit amet luctus venenatis. Turpis in eu mi
+				bibendum neque egestas congue quisque egestas.
+				Pellentesque sit amet porttitor eget dolor morbi non.
+			</p>
+		</div>
+
+	</div>
+	</div>
+
+
+<!-- ================  End of Home page2  ================ -->	
+
+<!-- ================  Start of Page3  ================ -->
+
+<div class="container">
+	<div class="page3">
+		<div class="content">
+			<h1>Made custom for you</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+				sed do eiusmod tempor incididunt ut labore et dolore
+				magna aliqua. Ut enim ad minim veniam.
+			</p>
+		</div>
+		<div class="img">
+			<img src="image-01.jpg">
+		</div>
+	</div>
+</div>
+
+<!-- ================  End of Home page3  ================ -->
+
+<!-- ================  Start of Page4  ================ -->
+
+<div class="container">
+	<div class="page4">
+		<div class="content">
+			<h1>Created with care</h1>
+			<p>
+				Felis donec et odio pellentesque diam volutpat. Aliquam
+				purus sit amet luctus venenatis. Turpis in eu mi
+				bibendum neque egestas congue quisque egestas.
+				Pellentesque sit amet porttitor eget dolor morbi non.
+			</p>
+		</div>
+		<div class="img">
+			<img src="image-02.jpg">
+		</div>
+	</div>
+</div>
+
+<!-- ================  End of Home page4  ================ -->
+
+</body>
+
+</html>
