--- a/index.html
+++ b/index.html
@@ -56,46 +56,46 @@
 	</div>
 
 
-<!-- ================  End of Home page2  ================ -->	
+<!-- ================  End of Page2  ================ -->	
 
 <!-- ================  Start of Page3  ================ -->
 
-<div class="container">
-	<div class="page3">
-		<div class="content">
-			<h1>Made custom for you</h1>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-				sed do eiusmod tempor incididunt ut labore et dolore
-				magna aliqua. Ut enim ad minim veniam.
-			</p>
-		</div>
-		<div class="img">
-			<img src="image-01.jpg">
+	<div class="container">
+		<div class="page3">
+			<div class="content">
+				<h1>Made custom for you</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+					sed do eiusmod tempor incididunt ut labore et dolore
+					magna aliqua. Ut enim ad minim veniam.
+				</p>
+			</div>
+			<div class="img">
+				<img src="image-01.jpg">
+			</div>
 		</div>
 	</div>
-</div>
 
 <!-- ================  End of Home page3  ================ -->
 
 <!-- ================  Start of Page4  ================ -->
 
-<div class="container">
-	<div class="page4">
-		<div class="content">
-			<h1>Created with care</h1>
-			<p>
-				Felis donec et odio pellentesque diam volutpat. Aliquam
-				purus sit amet luctus venenatis. Turpis in eu mi
-				bibendum neque egestas congue quisque egestas.
-				Pellentesque sit amet porttitor eget dolor morbi non.
-			</p>
-		</div>
-		<div class="img">
-			<img src="image-02.jpg">
+	<div class="container">
+		<div class="page4">
+			<div class="content">
+				<h1>Created with care</h1>
+				<p>
+					Felis donec et odio pellentesque diam volutpat. Aliquam
+					purus sit amet luctus venenatis. Turpis in eu mi
+					bibendum neque egestas congue quisque egestas.
+					Pellentesque sit amet porttitor eget dolor morbi non.
+				</p>
+			</div>
+			<div class="img">
+				<img src="image-02.jpg">
+			</div>
 		</div>
 	</div>
-</div>
 
 <!-- ================  End of Home page4  ================ -->
 
