--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Padauk&display=swap" rel="stylesheet">
-
-
-
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -34,27 +32,28 @@
 		<div class="HEADING__PAGE2">
 			<h2>Quality Designs</h2>
 		</div>
-		<div class="PARA1__PAGE2">
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-				sed do eiusmod tempor incididunt ut labore et dolore
-				magna aliqua. Dui vivamus arcu felis bibendum ut
-				tristique. Arcu dui vivamus arcu felis. Sociis natoque
-				penatibus et magnis dis.
-			</p>
-		</div>
-		<div class="PARA2__PAGE2">
-			<p>
-				Felis donec et odio pellentesque diam volutpat. Aliquam
-				purus sit amet luctus venenatis. Turpis in eu mi
-				bibendum neque egestas congue quisque egestas.
-				Pellentesque sit amet porttitor eget dolor morbi non.
-			</p>
+		<div class="PARA__PAGE2">
+			<div class="PARA1__PAGE2">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+					sed do eiusmod tempor incididunt ut labore et dolore
+					magna aliqua. Dui vivamus arcu felis bibendum ut
+					tristique. Arcu dui vivamus arcu felis. Sociis natoque
+					penatibus et magnis dis.
+				</p>
+			</div>
+			<div class="PARA2__PAGE2">
+				<p>
+					Felis donec et odio pellentesque diam volutpat. Aliquam
+					purus sit amet luctus venenatis. Turpis in eu mi
+					bibendum neque egestas congue quisque egestas.
+					Pellentesque sit amet porttitor eget dolor morbi non.
+				</p>
+			</div>
 		</div>
 
 	</div>
 	</div>
-
 
 <!-- ================  End of Page2  ================ -->	
 
